# lemkis

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  ConsoleApplication1maciejS.cpp  ConsoleApplication2.cpp  LICENSE  Methods.cs  MethodsTests.cs  Number_theory.hpp  README.md  Testy.hpp  main (1).cpp  main.cpp  main.cxx  polynomial (1).hpp  polynomial.hpp  projekt na algebre maciej.S Macierze !.cpp  reinforcement_learning.tex  stack_test.cpp
StackAndQueue/: .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  StackAndQueue.sln  cmake_install.cmake  main.cpp
StackAndQueue/StackAndQueue/: StackAndQueue.vcxproj  StackAndQueue.vcxproj.filters  benchmark.cpp  con_queue.hpp  con_stack.hpp  main.cpp  node.hpp  program.cpp  queue.hpp  queue_test.cpp  queue_test.hpp  stack.hpp  stack_test.cpp  stack_test.hpp
StackAndQueue/StackAndQueue/x64/Debug/: StackAndQueue.exe.recipe  StackAndQueue.ilk  vc143.idb
StackAndQueue/StackAndQueue/x64/Debug/StackAndQueue.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  StackAndQueue.lastbuildstate  link.command.1.tlog  link.read.1.tlog  (+2 more)
StackAndQueue/src/: CMakeLists.txt  Makefile  benchmark.cpp  benchmark.hpp  cmake_install.cmake  con_stack.hpp  queue.hpp  queue_test.cpp  queue_test.hpp  stack_test.cpp
StackAndQueue/src/include/: benchmark.hpp  con_queue.hpp  con_stack.hpp  list_stack.hpp  node.hpp  queue.hpp  queue_test.hpp  stack.hpp  stack_test.hpp  two_stack_queue.hpp  vector_stack.hpp
concurency/: CMakeLists.txt  dining_philosophers.md  main.cpp  make_debug.sh  readers_writers.md  run_debug.sh  sanitizers.md  thread_pool.md  thread_pool_problems.md
concurency/CsConcurency/: CsConcurency.sln
concurency/CsConcurency/CsConcurency/: DataPrepare.cs  IExample.cs  Program.cs
concurency/CsConcurency/CsConcurency/Benchmark/: QueueBenchmark.cs
concurency/CsConcurency/CsConcurency/Queue/: BaseQueues.cs  ConcurrentQueue.cs  MutexQueue.cs
concurency/CsConcurency/CsConcurency/Tasks/: ApiExample.cs  AtomicExample.cs  LockExample.cs  LockExample2.cs  MutexExample.cs  MutexExample2.cs  ParallelAsyncExample.cs  ParallelExample.cs  ParallelIOExample.cs  SemaphoreExample.cs  TaskExample.cs  ThreadPoolExample.cs  UiExample.cs
concurency/advanced/: README.md
concurency/basics/: basics.md  common_problems.md  ideas_for_project.md  threads.md
concurency/compare_and_swap/: CMakeLists.txt  README.md  cas.hpp
concurency/cuda/: README.md
concurency/dining_philosophers/: dining_philosophers.md
concurency/embedded/: prezentacja.md
concurency/embedded/bare_metal_concurrency/: toggle_delay.c  toggle_dual_millis.c  toggle_dual_timer_counters.c
concurency/embedded/freertos_concurrency/arduino/: freertos_blink.c
concurency/embedded/freertos_concurrency/esp32/: esp32_cpp_examples.cpp  freertos_mechanisms_introduction.c
concurency/embedded_concurrency_rtos/bare_metal_concurrency/: toggle_delay.c  toggle_dual_millis.c
concurency/embedded_concurrency_rtos/freertos_concurrency/arduino/: freertos_blink.c
concurency/embedded_concurrency_rtos/freertos_concurrency/esp32/: esp32_cpp_examples.cpp  freertos_mechanisms_introduction.c
concurency/mutex/: CMakeLists.txt  bank_account.hpp  condition_variable.hpp  motivation.cpp  motivation.md  mutex.cpp
concurency/openmp/: README.md
concurency/openmp/queue/: .clang-format  CMakeLists.txt  main.cpp
concurency/openmp/queue/src/: main.cpp
concurency/processes/: README.md  creating_processes.md  message_queues.md  pipes  pipes.md  pipes_in_c.md  producer_consumer_problem.md  semaphores.md  shared_memory.md  shared_memory_exercise.md  sockets.md  tasks.md  when_which.md
concurency/processes/embedded_concurrency_rtos/bare_metal_concurrency/: toggle_dual_timer_counters.c
concurency/processes/mpi/: CMakeLists.txt  README.md  broadcast.cpp  custom_data.cpp  hello_world.cpp  helper.cpp  matrix_multiplication.cpp  mpi.cpp  mpi.hpp  point_to_point.cpp  point_to_point_non_blocking.cpp  print.hpp  reduce.cpp  scatter_and_gather.cpp
concurency/processes/pik/: CMakeLists.txt  README.md
concurency/processes/pik/src/: a.out  common.h  helper.cpp  helper.h  main.cpp  pipes.cpp  pipes.h  prelude.h  semaphores.cpp  semaphores.h  unit.cpp  unit.h  worker.cpp  worker.h
concurency/processes/producer_consumer_problem_solution/: producer_consumer_problem_solution.cpp
concurency/processes/producer_consumer_problem_solution/src/: producer_consumer_problem_solution.cpp
concurency/producer_consumer/: benchmark.cpp  bounded_buffer.cpp  bounded_buffer.hpp  jthread.cpp  mutex.cpp  naive  naive.cpp  producer_consumer.md  ring_buffer.hpp  run.sh  run_n_times.sh
concurency/readers_writers/: readers_writers.md
concurency/student_projects/Basketball/: CMakeLists.txt  build_and_run.sh  lint.sh  main.cpp  utility.cpp
concurency/student_projects/Basketball/lib/: CMakeLists.txt  court.h  matchManager.h  player.h  shared_court.h  team.h  utility.h
concurency/student_projects/Dates_313029/: CMakeLists.txt  README.md
concurency/student_projects/Dates_313029/src/: main.cpp
concurency/student_projects/StackAndQueue/: .gitignore  CMakeLists.txt  README.md  charts.py  pioter_format.sh  pioter_format_all.sh  pioter_tidy.sh  pioter_tidy_all.sh
concurency/student_projects/StackAndQueue/results/: results.csv
concurency/student_projects/StackAndQueue/src/: benchmark.cpp  main.cpp  old_benchmark.cpp  struct_test.cpp
concurency/student_projects/group_synchronization/: CMakeLists.txt  main.cpp
concurency/student_projects/openmp/queue/: .clang-tidy  CMakeLists.txt  README.md  make_project.sh  make_project_better.sh
concurency/student_projects/printers/: CMakeLists.txt  build_and_run.sh  filter_company.sh  filter_employee.sh  filter_printer.sh  input.txt  lint.sh  main.cpp  output.txt  readme.md  sorter.sh
concurency/student_projects/printers/lib/: CMakeLists.txt  Company.h  CompanyPack.h  Employee.h  Messages.h  Office.h  Printer.h  SharedData.h  Utility.h
discrete_math/representations_of_numbers/main/: CMakeLists.txt  main.cpp  representation.cpp  representation.h
(+148 files in other folders)
